# mdict-cpp

./: .gitignore  CMakeLists.txt
src/: mdict.cc  ripemd128.c
src/include/: mdict.h  ripemd128.h
